# picopocket-sw

./: .gitignore  .gitmodules  CMakeLists.txt  NEx000.hpp  config.hpp  config_classes.hpp  constexprstring.hpp  default_scratchy_saved.ld  fifo.hpp  lwipopts.h  main.cpp  network_l2.cpp  ram_scratchy_saved.ld  usb_config.cpp  usb_descriptors.cpp  www.cpp  www.hpp
.github/workflows/: build.yml
16550/: 16550.cpp  16550.hpp  CMakeLists.txt  fifo_with_sep.hpp  uart_tcp_server.cpp  uart_tcp_server.hpp
audio/: CMakeLists.txt  audio.hpp  mss.cpp  resampler.hpp  sbdsp.cpp  sbdsp_magic_numbers.hpp  taps.py
common/: config.def  config.hpp  config_classes.hpp  config_converter.py  fifo.hpp  lwipopts.h
ioface/: CMakeLists.txt  config_iface.cpp  config_iface.hpp  ioiface.cpp  ioiface.hpp  protocol.txt
lib/ne2000xt/: CMakeLists.txt
or/: CMakeLists.txt  config.cpp  disk_mapper.cpp  int13_handler.hpp  int19_install.cpp  monitor.cpp  or.cpp  or.hpp  or_internal.hpp  ramdisk.cpp
or/8088/: CMakeLists.txt  Makefile  checksum.py  init.S  main.c
or/8088/bootmbr/: bootpico.asm
or/8088/chainmbr/: bootnorm.asm
or/config/: CMakeLists.txt  fdconfig.sys  webap.bat  websta.bat
or/config/freedos/: CMakeLists.txt
or/config/microweb/: CMakeLists.txt
or/config/tui/: CMakeLists.txt  config_iface.c  config_iface.h  dialogs.c  makefile.wat  menus.c  picopocket.c
or/mapper_scripts/: chssize.py  inmememu.py
or/mbr/: CMakeLists.txt  fdisk.script
or/monitor_scripts/: 1ddither.py  cga.py  fdos_boot.py  inmememu.py  int13handler.py  monitor.py  noise.py  traceint13.py
picogus/: CMakeLists.txt  isa_dma_gus.pio  isa_worker.cpp
picogus/boards/: picogus.h
sim/: CMakeLists.txt  sim.cpp
usb_scripts/: config.ui  usb_config.py
www/: www.yaml
